--- a/poc/Makefile.lisa
+++ b/poc/Makefile.lisa
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -Wall -g -std=c++11 -D"USE_OPENCV=1" -D"USE_CUDNN=0" -D"CPU_ONLY=1"
+CXXFLAGS = -Wall -g -std=c++11 -D"USE_CUDNN=0" -D"CPU_ONLY=1"
 EXEC_NAME = poc
 INCLUDES = -I/home/dibi/sources/caffe/include/
 DLIBS = -L/home/dibi/sources/caffe/build/lib/ -Wl,-rpath=/home/dibi/sources/caffe/build/lib/
